--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -5,38 +5,40 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="robots" content="noindex,nofollow,noarchive">
+
+  <!-- <meta name="robots" content="noindex,nofollow,noarchive">
   <meta name="yandex" content="noindex,nofollow,noarchive">
-  <meta name="googlebot" content="noindex,nofollow,noarchive">
-  <!-- <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
+  <meta name="googlebot" content="noindex,nofollow,noarchive"> -->
+
+  <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
   <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://garage-codd.ru/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://garage-codd.ru/favicons/favicon-16x16.png">
   <link rel="manifest" href="https://garage-codd.ru/favicons/site.webmanifest">
   <link rel="mask-icon" href="https://garage-codd.ru/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#090909"> -->
+  <meta name="theme-color" content="#090909">
   <!--Primary Meta Tags-->
-  <!-- <meta name="title" content="Гараж ЦОДД"/>
+  <meta name="title" content="Гараж ЦОДД"/>
   <meta name="description" content="Гараж ЦОДД"/>
-  <meta name="keywords" content="Гараж ЦОДД"/> -->
+  <meta name="keywords" content="Гараж ЦОДД"/>
 
   <!--Open Graph / Facebook-->
-  <!-- <meta property="og:type" content="website"/>
+  <meta property="og:type" content="website"/>
   <meta property="og:url" content="https://garage-codd.ru/"/>
   <meta property="og:title" content="Гараж ЦОДД"/>
   <meta property="og:description" content="Гараж ЦОДД"/>
-  <meta property="og:image" content="https://garage-codd.ru/seo.png"/> -->
+  <meta property="og:image" content="https://garage-codd.ru/seo.png"/>
 
   <!--Twitter-->
-  <!-- <meta property="twitter:card" content="summary_large_image"/>
+  <meta property="twitter:card" content="summary_large_image"/>
   <meta property="twitter:url" content="https://garage-codd.ru/"/>
   <meta property="twitter:title" content="Гараж ЦОДД"/>
   <meta property="twitter:description" content="Гараж ЦОДД"/>
-  <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/> -->
+  <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>
 
   <!-- Yandex.Metrika counter -->
-  <!-- <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
+  <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
   <script type="text/javascript">
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
       m[i].l=1*new Date();
@@ -51,7 +53,7 @@
           webvisor:true
       });
   </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript> -->
+  <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   <!-- /Yandex.Metrika counter -->
 
   <title>Гараж ЦОДД</title>
