--- a/src/index.html
+++ b/src/index.html
@@ -73,10 +73,10 @@
                     <img class="header__logo-img" src="./img/layout/header_logo.svg" alt="logo">
                     <p class="header__logo-text">Гараж ЦОДД</p>
                 </div>
-                <div class="ARphotoForm">
+                <!-- <div class="ARphotoForm">
                     <img class="ARphotoForm_img" src="./img/layout/pages/main/competition/gift_header.svg" alt="Фотоконкурс">
                     <p class="ARphotoForm-text">Фотоконкурс</p>
-                </div>
+                </div> -->
                 <div class="header__menu">
                     <div class="burger-menu burger-menu--closed">
                         <div class="bar"></div>
@@ -88,7 +88,7 @@
         </div>
     </header>
 
-    <div class="form-wrapper">
+    <!-- <div class="form-wrapper">
         <div class="container_main">
             <div class="form-content">
                 <div class="form_close">
@@ -104,13 +104,12 @@
                                 <li class="contact-form__text-item"><span>2.</span>Откройте любой транспорт в&nbsp;дополненной реальности, нажав кнопку&nbsp;AR</li>
                                 <li class="contact-form__text-item"><span>3.</span>Создайте творческие снимки с&nbsp;любым виртуальным транспортным средством и&nbsp;поделитесь результатом в&nbsp;этой форме</li>
                             </ol>
-                            <p>Трех авторов лучших снимков ждут призы</p>
+                            <p>Авторов лучших снимков ждут призы</p>
                         </div>
                         <div class="hidden_if_send">
                             <div class="preloader"></div>
                             <p class="contact-form__message"></p>
                     
-                            <!-- Поле с телеграммом -->
                             <div class="contact-form__input-wrapper telegram">
                                 <input class="contact-form__input contact-form__input_telegram" type="text" name="username" required placeholder="Ник Telegram">
                                 <div class="telegram-custom-placeholder">Ник в Telegram</div>
@@ -119,7 +118,6 @@
                                 </div>
                             </div>
                     
-                            <!-- Поле с выбором файла -->
                             <div class="contact-form__input-wrapper file">
                                 <div class="preview_photos"></div>
                                 <input class="contact-form__input contact-form__input_file" type="file" accept="image/*" name="photos" id="contact-form__input_file" multiple>
@@ -157,7 +155,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="menu">
         <div class="container_main">
