добавлены шрифты + исправлены баги при клике на кнопки и слайдер в моделе

--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -592,6 +592,7 @@
         myLoading();
     });
 </script>
+<!-- <script>
     // setTimeout(() => {
         let currentInfoPanel = null;
 
@@ -660,6 +661,6 @@
                 });
             });
     // }, 1500);
-</script>
+</script> -->
 </body>
 </html>
