SEO + new page moto.html

--- a/src/pages/moto.html
+++ b/src/pages/moto.html
@@ -21,22 +21,22 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#090909">
     <!--Primary Meta Tags-->
-    <meta name="title" content="Велопатруль"/>
-    <meta name="description" content="В&nbsp;теплое время года помогает велосипедистам, водителям и&nbsp;пешеходам"/>
-    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, патруль, велопатруль, велосипед"/>
+    <meta name="title" content="Мотопатруль"/>
+    <meta name="description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
+    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, патруль, мотопатруль, мотоцикл"/>
 
     <!--Open Graph / Facebook-->
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://garage-codd.ru/"/>
-    <meta property="og:title" content="Велопатруль"/>
-    <meta property="og:description" content="В&nbsp;теплое время года помогает велосипедистам, водителям и&nbsp;пешеходам"/>
+    <meta property="og:title" content="Мотопатруль"/>
+    <meta property="og:description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
     <meta property="og:image" content="https://garage-codd.ru/images/velo.png"/>
 
     <!--Twitter-->
     <meta property="twitter:card" content="summary_large_image"/>
     <meta property="twitter:url" content="https://garage-codd.ru/"/>
-    <meta property="twitter:title" content="Велопатруль"/>
-    <meta property="twitter:description" content="В&nbsp;теплое время года помогает велосипедистам, водителям и&nbsp;пешеходам"/>
+    <meta property="twitter:title" content="Мотопатруль"/>
+    <meta property="twitter:description" content="Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП"/>
     <meta property="twitter:image" content="https://garage-codd.ru/images/velo.png"/>
 
     <!-- Yandex.Metrika counter -->
@@ -58,7 +58,7 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
-    <title>Велопатруль</title>
+    <title>Мотопатруль</title>
     <link rel="stylesheet" href="../style/style.css">
     <!-- С версией 8, работает тач на телефоне, но не работает на десктопе сенсор -->
     <!-- С версией 5.3.8 тач на десктопе работает. На счет телефона пока не понятно -->
@@ -97,7 +97,7 @@
             <div class="tech_spec__description-grid_wrapper hidden">
                 <div class="tech_spec__titles hidden">
                     <div class="text_spec__texts">
-                        <p class="tech_spec__title">Велопатруль</p>
+                        <p class="tech_spec__title">Мотопатруль</p>
                     </div>
                 </div>
                 <div class="tech_spec__mission-panel hidden">
@@ -108,7 +108,7 @@
                     <p class="tech_spec__text">Задача</p>
                 </div>
                 <div class="tech_spec__mission hidden">
-                    <p class="tech_spec__text-descr">В&nbsp;теплое время года помогает велосипедистам, водителям и&nbsp;пешеходам</p>
+                    <p class="tech_spec__text-descr">Регулировка движения на&nbsp;затрудненных участках. Помощь при поломке или ДТП</p>
                 </div>
                 <div class="tech_spec__outfit-panel hidden">
                     <img src="../img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
@@ -121,9 +121,21 @@
                     <ul class="tech_spec__outfit-list">
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_amarok_1.svg" alt="Огнетушитель" fetchpriority="high">
+                                <img src="../img/layout/outfit/amarok/outfit_amarok_10.svg" alt="Дорожные конусы" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Огнетушитель</span>
+                            <span class="tech_spec__outfit-text">Дорожные конусы</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/amarok/outfit_amarok_4.svg" alt="Трос" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Трос</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/amarok/outfit_amarok_4.svg" alt="Насос" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Насос</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
@@ -133,9 +145,9 @@
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/amarok/outfit_amarok_3.svg" alt="Инструменты" fetchpriority="high">
+                                <img src="../img/layout/outfit/amarok/outfit_amarok_6.svg" alt="Пусковое устройство" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Инструменты</span>
+                            <span class="tech_spec__outfit-text">Пусковое устройство</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
@@ -145,21 +157,27 @@
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/amarok/outfit_amarok_3.svg" alt="Курвиметр" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Курвиметр</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
+                                <img src="../img/layout/outfit/amarok/outfit_amarok_3.svg" alt="Инструменты" fetchpriority="high">
+                            </div>
+                            <span class="tech_spec__outfit-text">Инструменты</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
                                 <img src="../img/layout/outfit/velo/outfit_velo_1.svg" alt="Вода" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Вода</span>
+                            <span class="tech_spec__outfit-text">Ремкомплект для колес</span>
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/velo/outfit_velo_2.svg" alt="Приложение «Помощник Москвы»" fetchpriority="high">
+                                <img src="../img/layout/outfit/amarok/outfit_amarok_1.svg" alt="Огнетушитель" fetchpriority="high">
                             </div>
-                            <span class="tech_spec__outfit-text">Приложение «Помощник Москвы»</span>
-                        </li>
-                        <li class="tech_spec__outfit-item">
-                            <div class="tech_spec__outfit-img">
-                                <img src="../img/layout/outfit/solaris_gray/outfit_solaris_gray_12.svg" alt="Жезл регулировщика" fetchpriority="high">
-                            </div>
-                            <span class="tech_spec__outfit-text">Жезл регулировщика</span>
+                            <span class="tech_spec__outfit-text">Огнетушитель</span>
                         </li>
                     </ul>
                 </div>
@@ -268,7 +286,6 @@
 <div id="overlay"></div>
 
 <script type="module">
-    // import { VctrModelApi } from "https://app.vectary.com/studio-lite/scripts/api.js";
     let isModelLoaded = false;
 
     const LOADING_TIME = 50000;
@@ -278,7 +295,6 @@
     let preloader = document.querySelector(".progress-bar");
     const percentEl = document.getElementById("progress-label");
     const barEl = document.getElementById("progress-bar");
-    // let progressText = document.getElementById("progress_text");
 
     function fadeOutnojquery(el) {
         el.style.opacity = 1;
@@ -311,15 +327,6 @@
             percentEl.textContent = `${percent}%`;
             barEl.style.width = `${percent}%`;
 
-            // if (percent >= 25 && percent < 50) {
-            //     progressText.textContent = 'Подбираем экипаж...';
-            // } else if (percent >= 50 && percent < 70) {
-            //     progressText.textContent = 'Проводим ТО...';
-            // } else if (percent >= 70 && percent < 90) {
-            //     progressText.textContent = 'Намываем технику...';
-            // } else if (percent >= 80) {
-            //     progressText.textContent = 'Экипируемся...';
-            // }
             if (isModelLoaded) {
                 clearInterval(countInterval);
                 let acceleratedInterval = COUNT_LOAD_TIME / 0;
@@ -334,7 +341,6 @@
                     barEl.style.width = `${percent}%`;
 
                     if (percent === 100) {
-                        // progressText.textContent = 'Мы готовы!';
                         setTimeout(function () {
                             fadeOutnojquery(preloader);
                         }, 500);
@@ -347,45 +353,6 @@
 
     countLoad();
 
-    // function myLoading(url) {
-    //     console.log('myLoading go!');
-    //     let xhr = new XMLHttpRequest();
-    //     xhr.open('GET', url);
-    //     xhr.send();
-    //     const startTime = new Date().getTime(); // Запоминаем время начала загрузки
-
-    //     // 4. Эта функция будет вызвана после получения ответа
-    //     xhr.onload = function() {
-    //         if (xhr.status !== 200) { // анализ HTTP-статуса ответа
-    //             console.log(`Error ${xhr.status}: ${xhr.statusText}`); // e.g. 404: Not Found
-    //         } else {
-    //             // console.log(`Done, got ${xhr.response.length} bytes`); // response - ответ сервера
-    //             const endTime = new Date().getTime(); // Запоминаем время завершения загрузки
-    //             const fileSizeInBytes = xhr.response.length;
-    //             const fileSizeInMegabytes = fileSizeInBytes / (1024 * 1024); // Преобразование в мегабайты
-    //             const downloadTimeInSeconds = (endTime - startTime) / 1000; // Преобразование в секунды
-
-    //             console.log(`Done, got ${fileSizeInMegabytes.toFixed(1)} MB in ${downloadTimeInSeconds.toFixed(1)} seconds`);
-    //             setTimeout(() => {
-    //                 isModelLoaded = true;
-    //             }, 15000);
-    //         }
-    //     };
-    //     // UNSENT = 0; // initial state
-    //     // OPENED = 1; // open called
-    //     // HEADERS_RECEIVED = 2; // полученные заголовки ответа
-    //     // LOADING = 3; // происходит загрузка ответа (получен пакет данных)
-    //     // DONE = 4; // запрос выполнен
-    //     // xhr.onreadystatechange = function() {
-    //     //     if (xhr.readyState == 4) {
-    //     //         console.log('запрос выполнен');
-    //     //     }
-    //     // };
-    //     xhr.onerror = function() {
-    //         console.log("Request failed");
-    //     };
-    // }
-
     function myLoading() {
         console.log('myLoading go!');
         setTimeout(() => {
@@ -394,53 +361,27 @@
         }, 10000);
     }
 
-    
-
     const IframeObject = {
         AR_ON: 'https://www.vectary.com/p/1OaMXKivHNjDz5dAVF1jAI',
         AR_OFF: 'https://app.vectary.com/p/5yQbC2E7fw9qvLKC8uUBfX',
-        // XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/f5804f89-c08b-4b41-82cd-89f109f856b6/f5804f89-c08b-4b41-82cd-89f109f856b6',
-        // XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/136e355a-1c85-4b2d-8043-7bde4f83b47b/136e355a-1c85-4b2d-8043-7bde4f83b47b'
     };
-    // let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
+
     let screenWidth = window.innerWidth;
-    // let xhrFile;
     let readySRC;
     let ARButtonPulse = document.querySelector('.pulse_wrapper');
 
     if (screenWidth >= 700 && screenWidth <= 1200) {
         readySRC = IframeObject.AR_OFF;
-        // xhrFile = IframeObject.XHR_AR_OFF;
         ARButtonPulse.style.display = 'none';
     } else if (screenWidth < 700) {
         readySRC = IframeObject.AR_ON;
-        // xhrFile = IframeObject.XHR_AR_ON;
     } else {
         readySRC = IframeObject.AR_ON;
-        // xhrFile = IframeObject.XHR_AR_ON;
     }
-
-    // async function initializeModelApi() {
-    //     console.log('API go!');
-    //     try {
-    //         // Вызываем несуществующий метод, что приведет к ошибке (для теста)
-    //         // await viewerApi.nonExistentMethod();
-    //         await viewerApi.init();
-    //         viewerApi.isReady().then(() => {
-    //             isModelLoaded = true;
-    //             console.log('Model loaded');
-    //         });
-    //     } catch (error) {
-    //         console.error('Ошибка внутри API:', error);
-    //         myLoading(xhrFile);
-    //     }
-    // }
 
     document.addEventListener("DOMContentLoaded", () => {
         let VectaryIframe = document.querySelector('.VectaryIframe');
         VectaryIframe.src = readySRC;
-        // initializeModelApi();
-        // myLoading(xhrFile);
         myLoading();
     });
 </script>
