--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <meta name="googlebot" content="noindex,nofollow,noarchive"> -->
 
     <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
+    <meta name="google-site-verification" content="0dZw6jM4sYdeu4GqW-DoUbESkEAaX7OuIC6deq1n5OQ" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://garage-codd.ru/favicons/favicon-32x32.png">
@@ -19,21 +20,21 @@
     <meta name="theme-color" content="#090909"/>
     <!--Primary Meta Tags-->
     <meta name="title" content="Гараж ЦОДД"/>
-    <meta name="description" content="Гараж ЦОДД"/>
-    <meta name="keywords" content="Гараж ЦОДД"/>
+    <meta name="description" content="Интерактивный просмотр транспорта ЦОДД с&nbsp;возможностью вывода в&nbsp;дополненную реальность выбранной модели"/>
+    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели"/>
 
     <!--Open Graph / Facebook-->
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://garage-codd.ru/"/>
     <meta property="og:title" content="Гараж ЦОДД"/>
-    <meta property="og:description" content="Гараж ЦОДД"/>
+    <meta property="og:description" content="Интерактивный просмотр транспорта ЦОДД с&nbsp;возможностью вывода в&nbsp;дополненную реальность выбранной модели"/>
     <meta property="og:image" content="https://garage-codd.ru/seo.png"/>
 
     <!--Twitter-->
     <meta property="twitter:card" content="summary_large_image"/>
     <meta property="twitter:url" content="https://garage-codd.ru/"/>
     <meta property="twitter:title" content="Гараж ЦОДД"/>
-    <meta property="twitter:description" content="Гараж ЦОДД"/>
+    <meta property="twitter:description" content="Интерактивный просмотр транспорта ЦОДД с&nbsp;возможностью вывода в&nbsp;дополненную реальность выбранной модели"/>
     <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>
 
     <!-- Yandex.Metrika counter -->
