--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -11,6 +11,8 @@
     <meta name="googlebot" content="noindex,nofollow,noarchive"> -->
 
     <meta name="yandex-verification" content="c74167eb0fd8f8fe" />
+    <meta name="google-site-verification" content="0dZw6jM4sYdeu4GqW-DoUbESkEAaX7OuIC6deq1n5OQ" />
+
     <link rel="apple-touch-icon" sizes="180x180" href="https://garage-codd.ru/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://garage-codd.ru/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="https://garage-codd.ru/favicons/favicon-16x16.png">
@@ -19,23 +21,23 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#090909">
     <!--Primary Meta Tags-->
-    <meta name="title" content="Гараж ЦОДД"/>
-    <meta name="description" content="Гараж ЦОДД"/>
-    <meta name="keywords" content="Гараж ЦОДД"/>
+    <meta name="title" content="Мобильный ситуационный центр. Автобус"/>
+    <meta name="description" content="Сбор оперативной дорожно-транспортной информации и&nbsp;управление транспортной обстановкой из&nbsp;любой локации"/>
+    <meta name="keywords" content="гараж, ЦОДД, AR, VR, дополненная реальность, иммерсивное погружение, модели, автобус, мобильный ситуационный центр, ситуационный центр, мобильный"/>
 
     <!--Open Graph / Facebook-->
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://garage-codd.ru/"/>
-    <meta property="og:title" content="Гараж ЦОДД"/>
-    <meta property="og:description" content="Гараж ЦОДД"/>
-    <meta property="og:image" content="https://garage-codd.ru/seo.png"/>
+    <meta property="og:title" content="Мобильный ситуационный центр. Автобус"/>
+    <meta property="og:description" content="Сбор оперативной дорожно-транспортной информации и&nbsp;управление транспортной обстановкой из&nbsp;любой локации"/>
+    <meta property="og:image" content="https://garage-codd.ru/images/bus.png"/>
 
     <!--Twitter-->
     <meta property="twitter:card" content="summary_large_image"/>
     <meta property="twitter:url" content="https://garage-codd.ru/"/>
-    <meta property="twitter:title" content="Гараж ЦОДД"/>
-    <meta property="twitter:description" content="Гараж ЦОДД"/>
-    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>
+    <meta property="twitter:title" content="Мобильный ситуационный центр. Автобус"/>
+    <meta property="twitter:description" content="Сбор оперативной дорожно-транспортной информации и&nbsp;управление транспортной обстановкой из&nbsp;любой локации"/>
+    <meta property="twitter:image" content="https://garage-codd.ru/images/bus.png"/>
 
     <!-- Yandex.Metrika counter -->
     <script async src="https://mc.yandex.ru/metrika/tag.js"></script>
@@ -56,8 +58,7 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/95985378" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
-    <title>Гараж ЦОДД</title>
-    <meta name="description" content="Smooth Cam movement"/>
+    <title>Мобильный ситуационный центр. Автобус</title>
     <link rel="stylesheet" href="../style/style.css">
     <!-- С версией 8, работает тач на телефоне, но не работает на десктопе сенсор -->
     <!-- С версией 5.3.8 тач на десктопе и телефоне работает-->
