Добавлен мото на главную + модель

--- a/src/pages/moto.html
+++ b/src/pages/moto.html
@@ -85,7 +85,7 @@
 </div>
 
 <div class="header">
-    <a class="header__logo" href="../index.html#velo_patrol">
+    <a class="header__logo" href="../index.html#traffic_patrol">
         <img class="header__logo-img" src="../img/layout/header_logo.svg" alt="logo">
         <p class="header__logo-text">Гараж ЦОДД</p>
     </a>
@@ -202,6 +202,13 @@
             <div class="auto_park_slider">
                 <div class="auto_park_slider-overflow swiper_model">
                     <div class="auto_park_slider-wrapper swiper-wrapper">
+                        <div class="gallery_item swiper-slide active">
+                            <a class="gallery_item_link" href="#">
+                                <picture>
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/moto.png" alt="moto" fetchpriority="high">
+                                </picture>
+                            </a>
+                        </div>
                         <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="kamaz.html">
                                 <picture>
@@ -238,7 +245,7 @@
                                 <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">
                             </a>
                         </div>
-                        <div class="gallery_item swiper-slide active">
+                        <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="velo.html">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
@@ -362,8 +369,8 @@
     }
 
     const IframeObject = {
-        AR_ON: 'https://www.vectary.com/p/1OaMXKivHNjDz5dAVF1jAI',
-        AR_OFF: 'https://app.vectary.com/p/5yQbC2E7fw9qvLKC8uUBfX',
+        AR_ON: 'https://app.vectary.com/p/20JQIwevUsATXy0FmMItB6',
+        AR_OFF: 'https://app.vectary.com/p/5DCAXqY66WlQGA3Qzm4iPI',
     };
 
     let screenWidth = window.innerWidth;
