--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,7 @@
                     </div>
                     <div class="traffic_patrol-text-4">
                         <p class="traffic_patrol-text">
-                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: грузовик, пикап, фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
+                            В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: мотоцикл, грузовик, пикап, фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
                         </p>
                     </div>
                     <div class="traffic_patrol-text-5">
@@ -320,7 +320,7 @@
                             Дорожный патруль нельзя вызвать. Задания экипажи получают от&nbsp;дежурных Ситуационного центра ЦОДД
                         </p>
                     </div>
-                    <div class="traffic_patrol-slide-kamaz_NOSLIDER">
+                    <!-- <div class="traffic_patrol-slide-kamaz_NOSLIDER">
                         <a class="garage_model_card swiper-slide parentCardForLargeMonitor model_1" href="kamaz.html">
                             <div class="slid_img">
                                 <picture>
@@ -393,10 +393,34 @@
                                 </div>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="traffic_patrol-slide-kamaz">
                         <div class="traffic_patrol_slider-wrapper swiper1">
                             <div class="traffic_patrol_slider swiper-wrapper">
+                                <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="moto.html">
+                                    <div class="slid_img">
+                                        <picture>
+                                            <img class="menu_preview-img" src="./img/layout/pages/main/slider/moto.png" alt="Мотопатруль" fetchpriority="high">
+                                        </picture>
+                                        <video class="menu_preview-video" src="./img/video/moto.mp4" muted loop playsinline></video>
+                                    </div>
+                                    <div class="slid_info">
+                                        <div class="slid_info-desc">
+                                            <p class="slid_info-title">Дорожный патруль</p>
+                                            <p class="slid_info-text">Мотоцикл</p>
+                                        </div>
+                                        <div class="slid_info-link">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                                <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                                    <rect width="18" height="18" fill="#D9D9D9"/>
+                                                </mask>
+                                                <g mask="url(#mask0_1137_313)">
+                                                    <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                                </g>
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
                                  <a class="garage_model_card swiper-slide parentCardForLargeMonitor" href="kamaz.html">
                                     <div class="slid_img">
                                         <picture>
