--- a/src/pages/kamaz.html
+++ b/src/pages/kamaz.html
@@ -301,6 +301,13 @@
             <div class="auto_park_slider">
                 <div class="auto_park_slider-overflow swiper_model">
                     <div class="auto_park_slider-wrapper swiper-wrapper">
+                        <div class="gallery_item swiper-slide">
+                            <a class="gallery_item_link" href="moto.html">
+                                <picture>
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/moto.png" alt="moto" fetchpriority="high">
+                                </picture>
+                            </a>
+                        </div>
                         <div class="gallery_item active swiper-slide">
                             <a class="gallery_item_link" href="#">
                                 <picture>
