--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -185,6 +185,13 @@
                 <div class="auto_park_slider-overflow swiper_model">
                     <div class="auto_park_slider-wrapper swiper-wrapper">
                         <div class="gallery_item swiper-slide">
+                            <a class="gallery_item_link" href="moto.html">
+                                <picture>
+                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/moto.png" alt="moto" fetchpriority="high">
+                                </picture>
+                            </a>
+                        </div>
+                        <div class="gallery_item swiper-slide">
                             <a class="gallery_item_link" href="kamaz.html">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/kamaz.png" alt="kamaz" fetchpriority="high">
@@ -221,7 +228,7 @@
                             </a>
                         </div>
                         <div class="gallery_item swiper-slide active">
-                            <a class="gallery_item_link" href="velo.html">
+                            <a class="gallery_item_link" href="#">
                                 <picture>
                                     <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo" fetchpriority="high">
                                 </picture>
